turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: not found: value color
	marqueSol(colors((x+1)%color.length))
                               ^